--- a/views/user/about.pug
+++ b/views/user/about.pug
@@ -31,4 +31,4 @@ block content
                     .col-auto.d-flex.flex-row
                         i.fas.fa-caret-right.mr-2 
                         p.lang mongoDB
-                            
+    include ../includes/dark                    
