--- a/views/user/contact.pug
+++ b/views/user/contact.pug
@@ -17,3 +17,4 @@ block content
             textarea.form-control#message
 
         button(type="submit" form="form").submitBtn Send
+    include ../includes/dark
