--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,6 +58,59 @@ li a:hover {
     color: royalblue;
 }
 
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 64px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+    background-color: #F3F4F6;
+  }
+  
+  .slider.round {
+    border-radius: 34px;
+    background-color: #D1D5DB;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+    background-color: #162038;
+  }
+
 body {
     background-color: #F3F4F6;
 }
@@ -108,7 +161,7 @@ body {
     color: #162038;
     font-size: 1.25em;
     text-decoration: none;
-    background-image: linear-gradient(to right, #F3F4F6 0, #F3F4F6 100%);
+    /* background-image: linear-gradient(to right, #F3F4F6 0, #F3F4F6 100%); */
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
