--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -4,6 +4,6 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
     link(rel="icon" href="img/favicon.png" type="image/x-icon")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css")
-    link(rel="stylesheet" href="/css/style.css")
+    link(rel="stylesheet" href="/css/style.css" id="light")
     link(rel="stylesheet" href="/font/css/all.min.css")
     title #{title}
