--- a/views/includes/navbar.pug
+++ b/views/includes/navbar.pug
@@ -6,6 +6,13 @@ nav.navbar.navbar-expand-lg.container
   .collapse.navbar-collapse#navbarSupportedContent
     ul.navbar-nav.ml-auto
       li.nav-item
-        a(href="/about", class=(path === '/'?'nav-link active':'nav-link')) About
+        a(href="/", class=(path === '/'?'nav-link active':'nav-link')) Home
       li.nav-item
-        a(href="/contact").nav-link Contact
+        a(href="/about", class=(path === '/about'?'nav-link active':'nav-link')) About
+      li.nav-item
+        a(href="/contact", class=(path === '/contact'?'nav-link active':'nav-link')).nav-link Contact
+    
+    form.form-inline.my-2.my-lg-0
+        label.switch
+          input(type="checkbox" checked)#checkbox
+          span.slider.round
