--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -14,3 +14,5 @@ block content
                 i.fab.fa-instagram.mr-2
                 a(href="https://www.instagram.com/onurhandtr0/").text-decoration-none Instagram
 
+    
+    include ../includes/dark
